dodanie canvas nad video

--- a/src/template.html
+++ b/src/template.html
@@ -5,7 +5,7 @@
     <title>TemplateFront</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body>
+  <body style="background: #ececec;">
     <div id="app">Loading...</div>
   </body>
 </html>
